# OpenParsecAndroid

./: .gitignore  .gitmodules  README.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_android.c  audio_android.h  parsec_jni.c
app/src/main/cpp/parsec-sdk/: parsec.h
app/src/main/java/com/aigch/openparsec/: MainActivity.kt  OpenParsecApp.kt
app/src/main/java/com/aigch/openparsec/audio/: AudioPlayer.kt
app/src/main/java/com/aigch/openparsec/input/: GameControllerHandler.kt  KeyCodeTranslators.kt  TouchHandler.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ios/: update_json.py
ios/OpenParsec/: ActivityIndicator.swift  AppDelegate.swift  CParsec.swift  ContentView.swift  ExUI.swift  GameController.swift  KeyBoardTest.swift  LoginView.swift  MainView.swift  NetworkHandler.swift  ParsecGLKRenderer.swift  ParsecGLKViewController.swift  ParsecMetalRenderer.swift  ParsecMetalViewController.swift  ParsecUserData.swift  ParsecView.swift  ParsecViewController.swift  SceneDelegate.swift  SettingsHandler.swift  SettingsView.swift  Shared.swift  TouchHandlingView.swift  UIViewControllerWrapper.swift  URLImage.swift  ViewContainerPatch.swift
ios/OpenParsec/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/OpenParsec/Base.lproj/: LaunchScreen.storyboard
(+18 files in other folders)
